# Thesis

./: .gitmodules  CMakeLists.txt  README.md  actor.sdf  model.sdf  test.cc
Detection/: test.py  test2.py  train.py
Detection/config/: train_config.yaml
Detection/datasets/: README.md  jrdb_to_kitty.py
Detection/evaluations/: evaluation.py  plane_eval_utils.py
Detection/models/: Pointnet.py
Detection/tests/: train.py
Detection/tests/utils/: MNIST3d.py
Detection/utils/: humanDBLoader.py  o3d_funcs.py  plane_detector.py
gp_models/reflective_table/: model.config  table.sdf
gp_models/reflective_table/meshes/: Table.dae
human_models/: actor_model.sdf  walk.dae
simulation/: HumanMotionCreator.py  config.yaml  install_log.txt  simulation.launch.py
simulation/gp_models/: ground.sdf  light_model.sdf  test.dae  walls.sdf
simulation/gp_models/lidar/: lidar_3d_v2.dae  lidar_module.sdf  lidar_module.xacro
simulation/gp_models/reflective_table/: table.sdf
simulation/gp_models/reflective_table/meshes/: Table.dae
simulation/human_models/: actor_model.sdf
simulation/indoor_spaces/: README.md
simulation/indoor_spaces/bedroom/: bed.sdf  bedroom.sdf  closet1.sdf  closet2.sdf  desk.sdf  door.sdf  shelf1.sdf  shelf2.sdf  walls.sdf
simulation/indoor_spaces/bedroom/meshes/: bed.dae  closet1.dae  door.dae  shelf1.dae  shelf2.dae
simulation/ros_packages/src/gazebo_to_ros2/: CMakeLists.txt  package.xml
simulation/ros_packages/src/gazebo_to_ros2/src/: gazebo_to_ros2_node.cpp
