<?xml version="1.0"?>
<package format="2">
  <name>gazebo_to_ros2</name>
  <version>0.0.1</version>
  <description>My ROS2 package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
